--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,14 @@
 
 {
-    "github.copilot.editor.enableAutoCompletions": false,
+    // Disable Copilot
     "chat.commandCenter.enabled": false,
+    "github.copilot.chat.useProjectTemplates": false,
+    "github.copilot.editor.enableAutoCompletions": false,
+    "github.copilot.enable": { "*": false },
+    "inlineChat.lineNaturalLanguageHint": false,
+    "terminal.integrated.initialHint": false,
+    "workbench.editor.empty.hint": "hidden",
+    "editor.guides.indentation": true,
+
 }
 
